<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- <string name="hello">Hello World, ProfileExplorer!</string> -->
    
    <string name="saveProfileButtonString">Save Profile</string>
    <string name="syncNowButtonString">Sync Now</string>
    <string name="app_name">Andro Sync</string>
    <string name="ftpHostnameString">FTP Hostname</string>
    <string name="ftpPortString">FTP Port</string>
    <string name="ftpUsernameString">FTP Username</string>
    <string name="ftpPasswordString">FTP Password</string>
    <string name="TestFTPConnectionString">Test</string>
    <string name="profileNameString">Profile Name</string>
    <string name="createNewProfileString">+ Click here to create new profile</string>
    <string name="profileSettingsString">Settings</string>
    <string name="profileFoldersSyncString">Folders</string>
    <string name="profileScheduleString">Schedule</string>
    <string name="profileLocalFolderPathString">Local Path</string>
    <string name="profileRemoteFolderPathString">Remote Path</string>
    <string name="profileRemoveFolderSyncString">Remove</string>
    <string name="fileIncludePatternString">Includes</string>
    
    <string name="syncDirectionPrompt">Sync Direction(s)</string>
    <string-array name="syncDirections">
        <item>From Phone to Server</item>
        <item>From Server to Phone</item>
        <item>Both directions</item>
    </string-array>
    
    <string name="fileExcludePatternString">Excludes</string>
    <string name="addFolderButtonString">Add Folder</string>
    <string name="testingFTPConnectionDialogHeaderText">Testing:</string>
    <string name="testFTPSuccessString">SUCCESS: Connection succeeded</string>
    <string name="testFTPFailString">FAIL: </string>
    <string name="testFTPConnectionDeniedString">FAIL: FTP server refused connection</string>
    <string name="folderRemoveDeniedBecauseLastOneString">You need at least one folder sync\nor you will have nothing to do!</string>
    
    <string name="scheduleFeatureComingSoon">Schedule feature coming soon!</string>
    
    

</resources>
