<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >
  
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:stretchColumns="1">
    	
    	<TableRow>
		<TextView  
			android:text="@string/profileNameString"
		/>
		<EditText
			android:id="@+id/profileName"
		/>
		</TableRow>
	
		<TableRow>
		<TextView  
    		android:text="@string/ftpHostnameString"
    	/>
		<EditText
			android:id="@+id/ftpHostname"
		/>
		</TableRow>
		
		<TableRow>
		<TextView  
    		android:text="@string/ftpPortString"
    	/>
		<EditText
			android:id="@+id/ftpPort"
			android:text="21"
		/>
		</TableRow>
		
		<TableRow>
		<TextView  
    		android:text="@string/ftpUsernameString"
    	/>
		<EditText
			android:id="@+id/ftpUsername"
		/>
		</TableRow>
		
		<TableRow>
		<TextView  
    		android:text="@string/ftpPasswordString"
    	/>
		<EditText
			android:id="@+id/ftpPassword"
			android:password="true"
		/>
		</TableRow>
	
		<TableRow>
		<Button 
			android:text="@string/TestFTPConnectionString" 
			android:id="@+id/testFTPButton" 
		/>
		</TableRow>
			
	</TableLayout>
</ScrollView>
